--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "JobFinder: A user-friendly job portal connecting job seekers and employers, providing efficient search and application tools for seamless career opportunities.",
   "main": "server.js",
-  "type" :"module",
+  "type": "module",
   "scripts": {
-    "start" : "node server.js",
-    "server" : "nodemon server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Haris-Mohanty/JobFinder#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
