--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 DEV_MODE = development
 MONGO_URL = mongodb+srv://harismohanty:<8658763042>@cluster0.adm6qji.mongodb.net/jobfinder
+MONGO_LOCAL_URL = mongodb://127.0.0.1:27017/jobfinder
