--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
