--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.4"
   }
